# web_sample

./: Cargo.toml  log4rs.yaml  readme.md
src/: main.rs
src/models/: db.rs  mod.rs
src/repository/: mod.rs  repo.rs
src/routes/: hello.rs  mod.rs  routes.rs
