[package]
name = "web_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rbson = "2.0"

# logging lib(required)
log = "0.4"
# fast_log="1.3"
log4rs = "1.1.1"

# rbatis (required) default is ```all-database```  +  ```runtime-tokio-rustls```
rbatis =  { version = "3.1" } 
lazy_static = "1.4.0"

async-trait = "0.1.53"